--- a/src/styles/AboutMe.scss
+++ b/src/styles/AboutMe.scss
@@ -25,7 +25,7 @@
       width: 40rem;
       height: 30rem;
       border-radius: 2rem;
-      background:url("/assets/aboutme.png");
+      background:url("/assets/aboutme.webp");
       background-size: cover;
       background-position: center;
     }
