--- a/src/styles/AboutMe.scss
+++ b/src/styles/AboutMe.scss
@@ -74,8 +74,63 @@
   }
 }
 
+@media (max-width:1010px){
+  .about-me-con {
+    margin-top: 5rem;
+    padding-top: 10rem;
 
-@media (max-width:600px){
+    > p {
+      font-size: 2rem;
+    }
+    > h1 {
+      font-size: 5rem;
+    }
+  
+    .about-me {
+      flex-direction: column;
+      .about-me-img {
+        width: 90%;
+      }
+  
+      .about-me-desc {
+        flex-direction: column;
+        img {
+          width: 5rem;
+        }
+  
+        .about-me-desc-top {
+          width: 100%;
+          display: flex;
+  
+          div {
+  
+            p {
+              font-size: 1.5rem;
+            }
+            h1 {
+              font-size: 2rem;
+            }
+            h2 {
+              font-size: 2rem;
+            }
+          }
+        }
+  
+        .about-me-desc-bottom {
+          p {
+            font-size: 1.7rem;
+            margin-top: 3rem;
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+  
+}
+
+
+@media (max-width:700px){
   .about-me-con {
     margin-top: 5rem;
     padding-top: 10rem;
