--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -9,6 +9,7 @@
   .hero-content {
     width: 120rem;
     height: 60rem;
+    padding: 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -103,7 +104,94 @@
   }
 }
 
-@media (max-width:600px){
+
+@media (max-width:1010px){
+
+  .hero {
+    .hero-content {
+
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    gap: 2rem;
+
+      .social-icons{
+        a{
+          display: inline-block;
+          margin: 2rem;
+          &:hover img{
+            transform: rotate(360deg);
+            transition: 0.5s all ease;
+          }
+        }
+        img{
+          width: 4rem;
+        }
+       }
+    
+  
+      .desc-section {
+        flex: 1;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .desc-section-content {
+          text-align: center;
+          p {
+            font-size: 1.5rem;
+            margin-bottom: 0.7rem;
+          }
+          h1 {
+            font-family: "Playwrite US Trad", cursive;
+            font-size: 3.5rem;
+            margin-bottom: 0.7rem;
+            font-weight: 600;
+            color: rgb(60, 60, 61);
+            letter-spacing: 0.8;
+          }
+          h2 {
+            font-size: 2rem;
+          }
+  
+          button {
+            padding: 1.5rem;
+            margin: 1rem;
+            font-size: 1.5rem;
+  
+          }
+  
+          .btn-cv {
+            border: 1px solid black;
+            background: white;
+            &:hover{
+              background: black;
+              color: white;
+              scale: 1.1;
+              transition: 0.3s all ease;
+            }
+          }
+  
+          .btn-contact {
+            color: white;
+            background: black;
+            border: 1px solid black;
+            &:hover{
+              background: white;
+              color: black;
+              scale: 1.1;
+              transition: 0.3s all ease;
+            }
+          }
+        }
+      }
+    }
+  }
+  
+
+}
+
+@media (max-width:700px){
 
   .hero {
     .hero-content {
@@ -111,6 +199,8 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
+      gap: 0;
+      padding: 0;
   
      .social-icons{
       a{
@@ -122,8 +212,8 @@
      }
   
       .img-section {
-        width: 30rem;
-        height:30rem;
+        width: 28rem;
+        height:28rem;
         margin-top: 15rem;
       }
   
