--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -61,6 +61,42 @@
     }
 }
 
+@media (max-width:700px){
+    .navbar{
+
+        .nav-content{
+    
+            .menu{
+                list-style: none;
+                display: flex;
+                gap: 2.2rem;
+    
+                .menu-item{
+                    position: relative;
+                    font-size: 1.5rem;
+                    cursor: pointer;
+                    &::after{
+                        content: '';
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 0.2rem;
+                        background: #7a7878;
+                        transform: scale(0);
+                    }
+                    &:hover::after{
+                        transform: scale(1);
+                        transition: 0.3s transform ease;
+                    }
+                }
+    
+            }
+    
+        }
+    }
+}
+
 @media (max-width:600px){
 
     .navbar{
