--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -4,26 +4,20 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-
+    border-bottom: 0.05rem solid rgb(214, 210, 210);
     > p {
         font-size: 2.5rem;
         text-align: center;
       }
     > h1 {
     font-size: 6rem;
+    margin-bottom: 3rem;
     text-align: center;
     text-transform: uppercase;
     }
-
-    .projects-con{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-
 }
 
-@media(max-width:600px){
+@media(max-width:700px){
     .projects{
         > p {
             font-size: 2rem;
