--- a/src/styles/SingleProject.scss
+++ b/src/styles/SingleProject.scss
@@ -1,55 +1,81 @@
-.single-project{
-    width: 30rem;
-    height: 40rem;
-    padding: 3rem;
-    margin: 3rem;
-    border-radius: 4rem;    
-    overflow: hidden;
-    border: 1px solid rgb(102, 100, 100);
+.single-project {
+  width: 100%;
+  .single-project-content {
+    width: 100%;
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+    border-top: 0.05rem solid rgb(214, 210, 210);
 
-    h2{
+    .img-section {
+      width: 30rem;
+      height: 30rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 80%;
+        height: 80%;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 2rem
+      }
+    }
+    .desc-section {
+      width: 70%;
+
+      h2 {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+      }
+
+      p {
         font-size: 2rem;
-        font-weight: 600;
-        text-align: center;
-    }
+        margin-bottom: 1rem;
+      }
 
-    a{
-        padding: 1rem 2rem;
-        margin: 0.7rem;
-        font-size: 1.3rem;
-        text-decoration: none;
+      span {
+        display: inline-block;
+        padding: 1rem;
+        margin: 1rem;
+        font-size: 1.5rem;
+        background: black;
+        color: white;
+        border-radius: 1rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .single-project {
+    .single-project-content {
+      flex-direction: column;
+      gap: 0;
+      .img-section {
+        img {
+          width: 70%;
+          height: 70%;
+        }
+      }
+      .desc-section {
+        width: 90%;
         text-align: center;
-        color: black;
-        border: 1px solid black;
-        border-radius: 4rem;
-        &:hover{
-            background: black;
-            color: white;
-            transform: scale(1.2);
-            transition: 0.3s all ease;
+
+        h2 {
+          font-size: 2rem;
+          margin-bottom: 1rem;
         }
 
-    }
-
-    .link-con{
-        margin: 1rem auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .img-con{
-        width: 100%;
-        height: 70%;
-        border-radius: 4rem;
-        overflow: hidden;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: center;
+        p {
+          font-size: 1.5rem;
         }
+
+        span {
+          font-size: 1.3rem;
+        }
+      }
     }
-    
-  
+  }
 }
