--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -32,7 +32,7 @@
       width: 28vw;
       height: 28vw;
       border-radius: 50%;
-      background-image: url("/assets/portrait.jpg");
+      background-image: url("/assets/portrait.webp");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
