--- a/src/styles/SingleProject.scss
+++ b/src/styles/SingleProject.scss
@@ -13,13 +13,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
+      
       img {
         width: 80%;
         height: 80%;
         object-fit: cover;
         object-position: center;
-        border-radius: 2rem
+        border-radius: 2rem;
+        box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.13);
       }
     }
     .desc-section {
