--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -78,6 +78,9 @@
         }
 
         .btn-cv {
+          @extend button;
+          text-decoration: none;
+          color: black;
           border: 1px solid black;
           background: white;
           &:hover{
