--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -33,7 +33,7 @@
       height: 28vw;
       border-radius: 50%;
       background-image: url("/assets/Ritik-img.webp");
-      background-position: center;
+      background-position: 70% 50%;
       background-size: cover;
       background-repeat: no-repeat;
     }
