--- a/src/styles/GetInTouch.scss
+++ b/src/styles/GetInTouch.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
