--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -1,6 +1,7 @@
 .hero {
   width: 100%;
   min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -200,6 +201,7 @@
     .hero-content {
       width: 100vw;
       height: 100vh;
+      height: 100dvh;
       display: flex;
       flex-direction: column;
       gap: 0;
