--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -1,6 +1,7 @@
 .projects{
     width: 100%;
     min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     justify-content: center;
     flex-direction: column;
