--- a/src/styles/AboutMe.scss
+++ b/src/styles/AboutMe.scss
@@ -1,7 +1,7 @@
 .about-me-con {
   width: 100%;
   min-height: 100vh;
-  min-height: 100dvh;
+  min-height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
