--- a/src/styles/Experience.scss
+++ b/src/styles/Experience.scss
@@ -1,7 +1,7 @@
 .experience{
     width: 100%;
     min-height: 100vh;
-    min-height: 100dvh;
+    min-height: 100svh;
     display: flex;
     justify-content: center;
     align-items: center;
