--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -132,7 +132,7 @@
                 right: -40%;
                 top: 100%;
                 height: 100vh;
-                height: 100dvh;
+                height: 100svh;
                 padding: 2rem;
                 background: rgba(255, 255, 255, 0.347);
                 backdrop-filter: blur(2rem);
